--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <script async src="http://www.google-analytics.com/analytics.js"></script>
         <script async src="js/perfmatters.js"></script>
 
-          <link async href="css/style.min.css" rel="stylesheet">
-          <link async  href="css/print.min.css" rel="stylesheet">
+          <link  href="css/style.min.css" rel="stylesheet" media="none">
+          <link   href="css/print.min.css" rel="stylesheet" media="none">
 
   </body>
 </html>
