--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
+      <a href="/"><img style="width: 70px;" src="img/profilepic.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
@@ -45,7 +45,7 @@
           </li>
 
           <li>
-            <img style="width: 100px;" src="img/pizzeria.jpg">
+            <img style="width: 100px;" src="img/pizzeria.png">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
