--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
-
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-  <!--  <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
-
-
   </head>
 
   <body>
@@ -67,8 +62,9 @@
         <script async src="http://www.google-analytics.com/analytics.js"></script>
         <script async src="js/perfmatters.js"></script>
 
-          <link  href="css/style.min.css" rel="stylesheet" media="none">
-          <link   href="css/print.min.css" rel="stylesheet" media="none">
+          <link  href="css/style.min.css" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+          <link   href="css/print.min.css" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+            <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
 
   </body>
 </html>
