--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
       <div class="content">
         <ul>
           <li>
-            <img  src="img/1.jpg" >
+            <img  src="img/1.jpg" media="min-width:500px" >
             <a href="project-2048.html">Build Your Own 2048!</a>
             <p>I made my own version of 2048. How cool is that!?</p>
           </li>
 
           <li>
-            <img  src="img/2.jpg" >
+            <img  src="img/2.jpg" media="min-width:500px" >
             <a href="project-webperf.html">Website Performance Optimization</a>
             <p>Hey... this class looks familiar.</p>
           </li>
 
           <li>
-            <img src="img/3.jpg" >
+            <img src="img/3.jpg" media="min-width:500px" >
             <a href="project-mobile.html">Mobile Web Development</a>
             <p>Making mobile apps isn't so hard after all.</p>
           </li>
