--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
-    <link href="css/style.min.css" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
-    <link href="css/print.min.css" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
 
   </head>
 
@@ -26,25 +23,25 @@
       <div class="content">
         <ul>
           <li>
-            <img  src="img/1.jpg" media="min-width:500px" >
+            <img  src="img/1.jpg" media="(min-width:500px)" >
             <a href="project-2048.html">Build Your Own 2048!</a>
             <p>I made my own version of 2048. How cool is that!?</p>
           </li>
 
           <li>
-            <img  src="img/2.jpg" media="min-width:500px" >
+            <img  src="img/2.jpg" media="(min-width:500px)" >
             <a href="project-webperf.html">Website Performance Optimization</a>
             <p>Hey... this class looks familiar.</p>
           </li>
 
           <li>
-            <img src="img/3.jpg" media="min-width:500px" >
+            <img src="img/3.jpg" media="(min-width:500px)" >
             <a href="project-mobile.html">Mobile Web Development</a>
             <p>Making mobile apps isn't so hard after all.</p>
           </li>
 
           <li>
-            <img style="width: 100px;" src="img/pizzeria.png">
+            <img style="width: 100px;" src="img/pizzeria.png" media="(min-width:500px)">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
@@ -65,6 +62,10 @@
         </script>
         <script async src="http://www.google-analytics.com/analytics.js"></script>
         <script async src="js/perfmatters.js"></script>
+        <link href="css/style.min.css" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+        <link href="css/print.min.css" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+        <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+
 
   </body>
 </html>
