--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
       <div class="content">
         <ul>
           <li>
-            <img  src="img/1.jpg" media="(min-width:500px)" >
+            <img  src="img/1.jpg">
             <a href="project-2048.html">Build Your Own 2048!</a>
             <p>I made my own version of 2048. How cool is that!?</p>
           </li>
 
           <li>
-            <img  src="img/2.jpg" media="(min-width:500px)" >
+            <img  src="img/2.jpg">
             <a href="project-webperf.html">Website Performance Optimization</a>
             <p>Hey... this class looks familiar.</p>
           </li>
 
           <li>
-            <img src="img/3.jpg" media="(min-width:500px)" >
+            <img src="img/3.jpg">
             <a href="project-mobile.html">Mobile Web Development</a>
             <p>Making mobile apps isn't so hard after all.</p>
           </li>
@@ -64,7 +64,7 @@
         <script async src="js/perfmatters.js"></script>
         <link href="css/style.min.css" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
         <link href="css/print.min.css" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
-        <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+      <!--  <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" media="none" onload="if(media!='all')media='all'"> -->
 
 
   </body>
