--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <script async src="js/perfmatters.js"></script>
     <link href="css/print.min.css" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
     <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" media="none" onload="if(media!='all')media='all'"> -->
-    <style media="none" onload="if(media!='all')media='all'">
+    <style>
     html {
       font-size: 100%;
       overflow-y: scroll;
